{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 25,
  "lineage": "0ad25fd3-d907-5f79-a8b7-beaa1f77da66",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "terraform-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f29e0e3e-a9e0-472d-bed0-b15577f0645f/resourceGroups/terraform-rg/providers/Microsoft.Network/networkInterfaces/terraform-nic",
            "internal_domain_name_suffix": "ee5vytjuxmbe5bihuv0z0yfymf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "1.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f29e0e3e-a9e0-472d-bed0-b15577f0645f/resourceGroups/terraform-rg/providers/Microsoft.Network/publicIPAddresses/terraform-ip",
                "subnet_id": "/subscriptions/f29e0e3e-a9e0-472d-bed0-b15577f0645f/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-net/subnets/terraform-sub"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-24-64-B2",
            "name": "terraform-nic",
            "private_ip_address": "1.123.1.4",
            "private_ip_addresses": [
              "1.123.1.4"
            ],
            "resource_group_name": "terraform-rg",
            "tags": {
              "envrionment": "dev"
            },
            "virtual_machine_id": "/subscriptions/f29e0e3e-a9e0-472d-bed0-b15577f0645f/resourceGroups/terraform-rg/providers/Microsoft.Compute/virtualMachines/terraform-vm"
          },
          "dependencies": [
            "azurerm_public_ip.terraform-ip",
            "azurerm_resource_group.terraform-rg",
            "azurerm_subnet.terraform-subnet",
            "azurerm_virtual_network.terraform-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "terraform-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f29e0e3e-a9e0-472d-bed0-b15577f0645f/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/terraform-sg",
            "location": "eastus",
            "name": "terraform-sg",
            "resource_group_name": "terraform-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "terraform-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "72.212.165.38/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.terraform-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "terraform-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f29e0e3e-a9e0-472d-bed0-b15577f0645f/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/terraform-sg/securityRules/terraform-dev-rule",
            "name": "terraform-dev-rule",
            "network_security_group_name": "terraform-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "terraform-rg",
            "source_address_prefix": "72.212.165.38/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.terraform-sg",
            "azurerm_resource_group.terraform-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "terraform-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/f29e0e3e-a9e0-472d-bed0-b15577f0645f/resourceGroups/terraform-rg/providers/Microsoft.Network/publicIPAddresses/terraform-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.88.133.57",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "terraform-ip",
            "resource_group_name": "terraform-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.terraform-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "terraform-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "1.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f29e0e3e-a9e0-472d-bed0-b15577f0645f/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-net/subnets/terraform-sub",
            "name": "terraform-sub",
            "resource_group_name": "terraform-rg",
            "virtual_network_name": "terraform-net"
          },
          "dependencies": [
            "azurerm_resource_group.terraform-rg",
            "azurerm_virtual_network.terraform-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "terraform-net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "1.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4d5c3f21-bb34-4f02-8507-a5759d60b865",
            "id": "/subscriptions/f29e0e3e-a9e0-472d-bed0-b15577f0645f/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-net",
            "location": "eastus",
            "name": "terraform-net",
            "resource_group_name": "terraform-rg",
            "subnet": [
              {
                "address_prefix": "1.123.1.0/24",
                "id": "/subscriptions/f29e0e3e-a9e0-472d-bed0-b15577f0645f/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-net/subnets/terraform-sub",
                "name": "terraform-sub"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.terraform-rg"
          ]
        }
      ]
    }
  ]
}